--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "^3.5.2",
     "@react-navigation/native": "^6.0.1",
+    "@react-navigation/native-stack": "^6.0.1",
     "expo": "~42.0.1",
     "expo-constants": "~11.0.1",
     "expo-status-bar": "~1.0.4",
@@ -17,6 +18,9 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.2.0",
+    "react-native-screens": "^3.5.0",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.3.0"
   },
