--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "PictyApp",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/PictyIconsquared.png",
     "splash": {
       "image": "./assets/splash2.png",
       "resizeMode": "cover",
