--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^3.5.2",
+    "@react-navigation/bottom-tabs": "^6.0.1",
     "@react-navigation/native": "^6.0.1",
     "@react-navigation/native-stack": "^6.0.1",
+    "@react-navigation/stack": "^6.0.1",
     "expo": "~42.0.1",
     "expo-constants": "~11.0.1",
     "expo-status-bar": "~1.0.4",
